Add Test Page to MkDocs site navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,3 +9,4 @@ nav:
   - House Rules: HouseRules.md
   - Organizations: Organizations.md
   - Session Notes: SessionNotes.md
+  - Test Page: TestPage.md
