Update homepage: Replace default MkDocs content with campaign introduction and quick links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Campaign Reference: CampaignReference.md
   - Locations: Locations.md
   - Characters: Characters.md
+  - Important NPCs: ImportantNPCs.md
   - Lore Books: LoreBooks.md
   - House Rules: HouseRules.md
   - Organizations: Organizations.md
